--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,5 +1,7 @@
 name: Build and Deploy
-on: [pull_request]
+on:
+  pull_request:
+    types: [closed]
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
