--- a/package.json
+++ b/package.json
@@ -41,6 +41,6 @@
     "vite": "^2.6.4"
   },
   "lint-staged": {
-    "*.js": "eslint --cache --fix"
+    "*.{js,jsx}": "eslint --cache --fix"
   }
 }
