--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -22,5 +22,6 @@ jobs:
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@4.1.5
         with:
+          ACCESS_TOKEN: ${{secrets.ACCESS_TOKEN}}
           branch: gh-pages # The branch the action should deploy to.
           folder: dist # The folder the action should deploy.
