--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,7 +1,7 @@
 name: Build and Deploy
 on:
-  pull_request:
-    types: [closed]
+  pull_request_target:
+    branches: [main]
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
