--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -2,6 +2,7 @@ name: Build and Deploy
 on:
   pull_request_target:
     branches: [main]
+    types: [closed]
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
