--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,12 +3,13 @@
     "browser": true,
     "es2021": true
   },
-  "extends": ["eslint:recommended", "plugin:react/recommended", "plugin:prettier/recommended","react-app"],
+  "extends": ["eslint:recommended", "plugin:react/recommended", "plugin:prettier/recommended", "react-app"],
   "parserOptions": {
     "ecmaFeatures": {
-      "jsx": true
+      "jsx": true,
+      "modules": true
     },
-    "ecmaVersion": 13,
+    "ecmaVersion": "latest",
     "sourceType": "module"
   },
   "plugins": ["react", "prettier"],
