--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
     "@vitejs/plugin-react": "^1.0.0",
+    "babel-eslint": "^10.1.0",
     "babel-jest": "^27.3.1",
     "babel-preset-react-app": "^10.0.0",
     "eslint": "^7.32.0",
