--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "jest": "^27.3.1",
     "lint-staged": "^11.2.3",
     "prettier": "2.4.1",
+    "recharts": "^2.1.5",
     "vite": "^2.6.4"
   },
   "lint-staged": {
