feat: fetch stats data, KeyStats component and format numbers utility

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,7 +17,8 @@
   },
   "plugins": ["react", "prettier"],
   "rules": {
-    "prettier/prettier": "error",
+    "prettier/prettier": "warn",
     "react/prop-types": "off"
-  }
+  },
+  "quotes": ["error", "single"]
 }
