--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -3,7 +3,6 @@
   "printWidth": 120,
   "singleQuote": true,
   "trailingComma": "all",
-  "jsxSingleQuote": true
+  "jsxSingleQuote": true,
   "endOfLine": "auto"
-
 }
