--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,8 +17,7 @@
   },
   "plugins": ["react", "prettier"],
   "rules": {
-    "prettier/prettier": "warn",
+    "prettier/prettier": ["error", { "endOfLine": "auto" }],
     "react/prop-types": "off"
   }
-  
 }
