--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@vitejs/plugin-react": "^1.0.0",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^27.3.1",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-react-app": "^10.0.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
