feat: initial typescript configuration

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,6 +10,7 @@
     "parser": "babel-eslint",
     "ecmaFeatures": {
       "jsx": true,
+      "ts": true,
       "modules": true
     },
     "ecmaVersion": 2020,
