--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "tsc && vite build",
     "serve": "vite preview",
     "test": "jest",
     "prepare": "husky install"
@@ -20,6 +20,10 @@
     "@commitlint/cli": "^13.2.1",
     "@commitlint/config-conventional": "^13.2.0",
     "@testing-library/react": "^12.1.2",
+    "@types/jest": "^27.0.2",
+    "@types/node": "^16.11.6",
+    "@types/react": "^17.0.34",
+    "@types/react-dom": "^17.0.11",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
     "@vitejs/plugin-react": "^1.0.0",
@@ -42,6 +46,7 @@
     "lint-staged": "^11.2.3",
     "prettier": "2.4.1",
     "recharts": "^2.1.5",
+    "typescript": "^4.4.4",
     "vite": "^2.6.4"
   },
   "lint-staged": {
