--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@babel/core": "^7.15.8",
     "@babel/eslint-parser": "^7.15.8",
     "@babel/preset-env": "^7.15.8",
+    "@babel/preset-typescript": "^7.16.0",
     "@commitlint/cli": "^13.2.1",
     "@commitlint/config-conventional": "^13.2.0",
+    "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^12.1.2",
     "@types/jest": "^27.0.2",
     "@types/node": "^16.11.6",
@@ -47,6 +49,7 @@
     "lint-staged": "^11.2.3",
     "prettier": "2.4.1",
     "recharts": "^2.1.5",
+    "regenerator-runtime": "^0.13.9",
     "typescript": "^4.4.4",
     "vite": "^2.6.4"
   },
