--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "jest": "^27.3.1",
     "lint-staged": "^11.2.3",
     "prettier": "2.4.1",
+    "react-loading-skeleton": "^3.0.1",
     "recharts": "^2.1.5",
     "regenerator-runtime": "^0.13.9",
     "typescript": "^4.4.4",
