--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@commitlint/config-conventional": "^13.2.0",
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^12.1.2",
+    "@types/cors": "^2.8.12",
     "@types/jest": "^27.0.2",
     "@types/node": "^16.11.6",
     "@types/react": "^17.0.34",
@@ -34,6 +35,7 @@
     "babel-jest": "^27.3.1",
     "babel-polyfill": "^6.26.0",
     "babel-preset-react-app": "^10.0.0",
+    "cors": "^2.8.5",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-react-app": "^6.0.0",
