--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@types/react-router-dom": "^5.3.2",
     "dayjs": "^1.10.7",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
