--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -19,6 +19,8 @@ jobs:
         run: |
           npm install
           npm run build
+        env:
+          BASE_URL: stock-tracker-turing
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@4.1.5
