--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
     "recharts": "^2.1.5",
     "regenerator-runtime": "^0.13.9",
     "typescript": "^4.4.4",
-    "vite": "^2.6.4"
+    "vite": "^2.6.4",
+    "vite-plugin-pwa": "^0.11.6"
   },
   "lint-staged": {
     "*.{js,jsx}": "eslint --cache --fix"
