--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "@babel/preset-typescript": "^7.16.0",
     "@commitlint/cli": "^13.2.1",
     "@commitlint/config-conventional": "^13.2.0",
+    "@testing-library/dom": "^8.11.1",
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^12.1.2",
+    "@testing-library/user-event": "^13.5.0",
     "@types/cors": "^2.8.12",
     "@types/jest": "^27.0.2",
     "@types/node": "^16.11.6",
