--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "dayjs": "^1.10.7",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
-    "react-router-dom": "^6.0.2"
+    "react-router-dom": "^6.0.2",
+    "rx-dom": "^7.0.3",
+    "rxjs": "^7.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.15.8",
@@ -30,6 +32,7 @@
     "@types/react": "^17.0.34",
     "@types/react-dom": "^17.0.11",
     "@types/recharts": "^1.8.23",
+    "@types/rx-dom": "^7.0.3",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
     "@vitejs/plugin-react": "^1.0.0",
